tests/custom/STARIS_2022/operation-type-errors/succ-type-error/stderr.expected
Error:
    Parser error in file: succ-type-error.essence Error is:
ValidatorError succ-type-error.essence:2:20:
  |
2 | such that b = succ([false, true, false])
  |                    ^^^^^^^^^^^^^^^^^^^^
Type error:
	Expected:"int enum or bool"
	Got: matrix indexed by [int] of bool

